# Liminal

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  count_line.sh  install-deps.sh  vulkanTriangle
include/: version.hpp
lib/liminal_json_io/: CMakeLists.txt
lib/liminal_json_io/include/: InJSON.hpp  InJson.hpp  JSONReader.hpp  Status.hpp  constants.hpp  types.hpp
lib/liminal_json_io/include/_lexing/: _Token.hpp  _lexing.hpp
lib/liminal_json_io/include/_private/: _JSON.hpp  _JsonBase.hpp  _JsonValue.hpp  _JsonValueTypes.hpp  _is_in_variant.hpp  _syntax.hpp
lib/liminal_json_io/include/_private/_complex_value/: _Array.hpp  _IComplexValue.hpp  _Object.hpp
lib/liminal_json_io/include/_private/_lexing/: _lexing.hpp  _types.hpp
lib/liminal_json_io/include/_private/_parsing/: _parsing.hpp  _types.hpp
lib/liminal_json_io/include/_private/_types/: _ComplexTypes.hpp  _SimpleTypes.hpp
lib/liminal_json_io/include/public/liminal_json_io/: InJson.hpp  is_in_variant_v.hpp  types.hpp
lib/liminal_json_io/include/types/: ComplexTypes.hpp  SimpleTypes.hpp  types.hpp
lib/liminal_json_io/src/: Array.cpp  InJson.cpp  Object.cpp  types.cpp
lib/liminal_json_io/src/_lexing/: _lexing.cpp
lib/liminal_json_io/src/_private/: _JSON.cpp  _JsonBase.cpp  _JsonValue.cpp
lib/liminal_json_io/src/_private/_complex_value/: _Array.cpp  _Object.cpp
lib/liminal_json_io/src/_private/_lexing/: _lexing.cpp  _types.cpp
lib/liminal_json_io/src/_private/_parsing/: _parsing.cpp
lib/liminal_windowing/: CMakeLists.txt
lib/vulkan_wrapper/: CMakeLists.txt
lib/vulkan_wrapper/include/: VulkanHdl.hpp
lib/vulkan_wrapper/include/_command/_pool/: _VkCommandPool_wrappers.hpp
lib/vulkan_wrapper/include/_device/_logical/: _VkDevice_wrappers.hpp
lib/vulkan_wrapper/include/_device/_physical/: _VkPhysicalDevice_wrappers.hpp
lib/vulkan_wrapper/include/_extension/: _Extensions_t.hpp
lib/vulkan_wrapper/include/_fence/: _VkFence_wrappers.hpp
lib/vulkan_wrapper/include/_instance/: _VkInstance_wrappers.hpp
lib/vulkan_wrapper/include/_layer/: _Layer_t.hpp
lib/vulkan_wrapper/include/_pipeline/: _VkPipeline_wrappers.hpp
lib/vulkan_wrapper/include/_private/_command/_buffer/: _VkCommandBuffer_wrappers.hpp
lib/vulkan_wrapper/include/_private/_command/_pool/: _VkCommandPool_wrappers.hpp
lib/vulkan_wrapper/include/_private/_device/_logical/: _VkDevice_wrappers.hpp
lib/vulkan_wrapper/include/_private/_extension/: _Extensions_t.hpp
lib/vulkan_wrapper/include/_private/_frame_buffer/: _VkFrameBuffer_wrappers.hpp
lib/vulkan_wrapper/include/_private/_instance/: _VkInstance_wrappers.hpp
lib/vulkan_wrapper/include/_private/_layer/: _Layer_t.hpp
lib/vulkan_wrapper/include/_private/_queue/: _QueueFamilies.hpp
lib/vulkan_wrapper/include/_private/_render_pass/: _VKRenderPass_wrappers.hpp
lib/vulkan_wrapper/include/_private/_shader/: _VkShaderModule_wrappers.hpp
lib/vulkan_wrapper/include/_private/_surface/: _VkSurfaceKHR_wrappers.hpp
lib/vulkan_wrapper/include/_private/_swap_chain/: _Supports.hpp  _VkSwapChainKHR_wrappers.hpp  _optimal_settings.hpp
lib/vulkan_wrapper/include/_queue/: _QueueFamilies.hpp
lib/vulkan_wrapper/include/_semaphore/: _VkSemaphore_wrappers.hpp
lib/vulkan_wrapper/include/_surface/: _VkSurfaceKHR_wrappers.hpp
lib/vulkan_wrapper/include/_swap_chain/: _VkSwapChainKHR_wrappers.hpp  _optimal_settings.hpp
lib/vulkan_wrapper/include/_swap_chain/_image/: _VkImage_wrappers.hpp
lib/vulkan_wrapper/include/_swap_chain/_image_view/: _VkImageView_wrappers.hpp
lib/vulkan_wrapper/include/public/vulkan_wrapper/: VulkanHdl.hpp
lib/vulkan_wrapper/src/: VulkanHdl.cpp
lib/vulkan_wrapper/src/_command/_buffer/: _VkCommandBuffer_wrappers.cpp
lib/vulkan_wrapper/src/_command/_pool/: _VkCommandPool_wrappers.cpp
lib/vulkan_wrapper/src/_device/_logical/: _VkDevice_wrappers.cpp
lib/vulkan_wrapper/src/_device/_physical/: _VkPhysicalDevice_wrappers.cpp
lib/vulkan_wrapper/src/_extension/: _Extensions_t.cpp
lib/vulkan_wrapper/src/_fence/: _VkFence_wrappers.cpp
lib/vulkan_wrapper/src/_frame_buffer/: _VkFrameBuffer_wrappers.cpp
lib/vulkan_wrapper/src/_instance/: _VkInstance_wrappers.cpp
lib/vulkan_wrapper/src/_layer/: _Layer_t.cpp
lib/vulkan_wrapper/src/_pipeline/: _VkPipeline_wrappers.cpp
lib/vulkan_wrapper/src/_pipeline/_layout/: _VkPipelineLayout_wrappers.cpp
lib/vulkan_wrapper/src/_queue/: _QueueFamilies.cpp
lib/vulkan_wrapper/src/_render_pass/: _VKRenderPass_wrappers.cpp
lib/vulkan_wrapper/src/_semaphore/: _VkSemaphore_wrappers.cpp
lib/vulkan_wrapper/src/_shader/: _VkShaderModule_wrappers.cpp
lib/vulkan_wrapper/src/_surface/: _VkSurfaceKHR_wrappers.cpp
lib/vulkan_wrapper/src/_swap_chain/: _Supports.cpp  _VkSwapChainKHR_wrappers.cpp  _optimal_settings.cpp  _optimal_settings.hpp
lib/vulkan_wrapper/src/_swap_chain/_image/: _VkImage_wrappers.cpp
lib/vulkan_wrapper/src/_swap_chain/_image_view/: _VkImageView_wrappers.cpp
shaders/: compile.sh  shader.frag  shader.vert  (+1 more)
tests/: CMakeLists.txt
tests/assets/: basicNoErrors.json  bitNestedNoErrors.json  largeJson.json  largeNoError.json  mediumSized.json  nestedNoError.json  nestedValues.json  simpleArrayJson.json
tests/assets/json/invalid/array/: wrongFormat.json
tests/assets/json/invalid/bool/: incomplete.json
tests/assets/json/invalid/brace/: missingClosing.json  missingOpening.json
tests/assets/json/invalid/bracket/: missingClosing.json  missingOpening.json  missingOpeningAtRoot.json
tests/assets/json/invalid/colon/: missing.json  tooMany.json  tooManyInSimpleKeyValuePair.json  wrongChar.json
tests/assets/json/invalid/comma/: misplaced.json  missingInArray.json  missingInNestedArray.json  missingInNumArray.json  multipleMissingInArray.json  tooMuch.json
tests/assets/json/invalid/dot/: keyContainingDot.json
tests/assets/json/valid/: edgeCases.json  large.json
tests/include/: FileCreator.test.hpp  constants.test.hpp  liminal_json_io.test.hpp
tests/src/: FileCreator.test.cpp  main.cpp
tests/src/liminal_json_io/: Array.test.cpp  InJson.test.cpp  Object.test.cpp
(+28 files in other folders)
